# universal

./: BUILD.bazel  WORKSPACE  package.json
modules/aspnetcore-engine/src/: main.ts
modules/express-engine/: package.json  public_api.ts
modules/express-engine/src/: main.ts
modules/grpc-engine/: BUILD.bazel  grpc-engine.proto  interface.proto  package.json
modules/grpc-engine/spec/: index.spec.ts
modules/grpc-engine/src/: main.ts
modules/socket-engine/: README.md
modules/socket-engine/src/: main.ts
