load("//tools:defaults.bzl", "ts_library", "ng_module", "ng_package")

package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "jasmine_node_test")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_proto_library")

proto_library(
    name = "engine_proto",
    srcs = ["grpc-engine.proto"],
)

ts_proto_library(
    name = "engine_ts_proto",
    deps = [":engine_proto"],
)

ng_module(
    name = "grpc-engine",
    srcs = glob([
        "*.ts",
        "src/**/*.ts",
    ]),
    module_name = "@nguniversal/grpc-engine",
    deps = [
        "//modules/common",
        # ":engine_ts_proto"
    ],
)

ng_package(
    name = "npm_package",
    srcs = [
        ":package.json",
        ":grpc-engine.proto",
    ],
    entry_point = "modules/grpc-engine/index.js",
    readme_md = ":README.md",
    deps = [
        ":grpc-engine",
    ],
)

# ts_library(
#     name = "unit_test_lib",
#     testonly = True,
#     srcs = glob([
#         "spec/**/*.spec.ts",
#     ]),
#     deps = [
#         ":grpc-engine",
#     ],
# )

# jasmine_node_test(
#     name = "unit_test",
#     srcs = [":unit_test_lib"],
# )
